--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'de.florianweinaug.system_settings'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         jcenter()
@@ -25,7 +25,18 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    namespace 'de.florianweinaug.system_settings'
+    compileSdkVersion 30
+
+    def javaVersion = JavaVersion.VERSION_17
+    compileOptions {
+        sourceCompatibility javaVersion
+        targetCompatibility javaVersion
+    }
+
+    kotlinOptions {
+        jvmTarget = javaVersion.toString()
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
