--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: system_settings
 description: Flutter plugin to open system and app settings on iOS and Android.
-version: 2.2.0
+version: 2.2.1
 homepage: https://github.com/fweinaug/system_settings
 repository: https://github.com/fweinaug/system_settings
 
 environment:
-  sdk: '>=2.15.1 <3.8.0'
+  sdk: '>=2.15.1 <=4.0.0'
   flutter: ">=1.12.0"
 
 dependencies:
